--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/src/css/style.css">
+</head>
+
+<body>
+    <svg class="line" width="1117" height="3506" viewBox="0 0 1117 3506" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path id="path"
+            d="M251 3506C214.5 3365.5 688.5 3477 1045.5 3180.5C1402.5 2884 242.5 3074 41 2802C-160.5 2530 914.5 2609.5 1088.5 2228C1262.5 1846.5 377 2121 148 1953.5C-81 1786 850 1587 1021 1492.5C1192 1398 172.5 1223.5 62.5 1071C-47.5 918.5 954 692.5 1073 604C1168.2 533.2 577.333 252.833 270 121.5L2 -11"
+            stroke="url(#paint0_linear_75_375)" stroke-width="7" />
+        <defs>
+            <linearGradient id="paint0_linear_75_375" x1="1192" y1="1113.5" x2="-37.908" y2="1451.52"
+                gradientUnits="userSpaceOnUse">
+                <stop stop-color="#FFFC00" />
+                <stop offset="0.505208" stop-color="#FE8181" />
+                <stop offset="1" stop-color="#44FFFF" />
+            </linearGradient>
+        </defs>
+    </svg>
+
+
+
+    <div class="header">
+        <div class="left">
+            <img src="/src/img/logo-dark.png" alt="" srcset="">
+            <h1>Faiz Sulistiyo</h1>
+        </div>
+        <div class="right ">
+            <ul>
+                <li><img src="/src/img/_Email Header.png" alt="" srcset=""></li>
+                <li><img src="/src/img/_Github.png" alt="" srcset=""></li>
+                <li><img src="/src/img/_Linkedin.png" alt="" srcset=""></li>
+            </ul>
+        </div>
+    </div>
+    <div class="sidebar">
+        <ul>
+            <li><a href="" class="hover" onmouseover="active()" onmouseout="inactive()">Contact</a></li>        
+            <li><a  class="hover" href="#works" onmouseover="active()" onmouseout="inactive()">Project</a></li>        
+            <li><a href="#"  class="hover" onmouseover="active()" onmouseout="inactive()">Home</a></li>        
+        </ul>
+    </div>
+    <section id="content">
+        <div class="content-intro">
+            <h1>
+                Hi, <br>
+                I'm Faiz.
+            </h1>
+            <p>
+                UI/UX Designer <br>
+                Front End Developer
+            </p>
+        </div>
+        <div class="rect"></div>
+    </section>
+    <section id="works">
+        <h1>Recent Works</h1>
+        <div class="title">
+            <div class="gradient">
+            </div>
+        </div>
+        <div class="container-project">
+            <div>
+                gambar
+            </div>
+            <div class="ul-wrap">
+                <ul>
+                    <li>
+                        <div class="card">
+                        <div class="card-header">
+                            <div class="num">01</div>
+                            <div class="card-title">Jobdesc</div>
+                        </div>
+                        <div class="card-btn"><img src="/src/img/logo-dark.png" alt=""></div>
+                    </div>
+                    </li>                    
+                    <li>
+                        <div class="card">
+                        <div class="card-header">
+                            <div class="num">01</div>
+                            <div class="card-title">Jobdesc</div>
+                        </div>
+                        <div class="card-btn"><img src="/src/img/logo-dark.png" alt=""></div>
+                    </div>
+                    </li>                    
+                    <li>
+                        <div class="card">
+                        <div class="card-header">
+                            <div class="num">01</div>
+                            <div class="card-title">Jobdesc</div>
+                        </div>
+                        <div class="card-btn"><img src="/src/img/logo-dark.png" alt=""></div>
+                    </div>
+                    </li>                    
+                    <li>
+                        <div class="card">
+                        <div class="card-header">
+                            <div class="num">01</div>
+                            <div class="card-title">Jobdesc</div>
+                        </div>
+                        <div class="card-btn"><img src="/src/img/logo-dark.png" alt=""></div>
+                    </div>
+                    </li>                    
+                </ul>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"
+        integrity="sha512-gsEItzcNkWxfxHjr4BaEZAd9YuRWYjxnj7c/yukcZ0/nWehUb5TjJNyyv1ApCU2DFH/qgw+stFZHPOKnoQnIuQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
+        integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/MotionPathPlugin.min.js"
+        integrity="sha512-Y6i/mURyP17N/zw/LOJkI+dMD3R935o6nxoXHHWH0Omb5tesvN1lAfyCMzOdxMJPVzTQRkMzT5JKN/iFwYO+bQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="/src/js/app.js"></script>
+</body>
+
+</html>
